Bug 57637 - Weston SEGFAULTS when resuming from LOCKED state w/tablet-shell.so.
Summary: Weston SEGFAULTS when resuming from LOCKED state w/tablet-shell.so.
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-27 23:22 UTC by U. Artie Eoff
Modified: 2013-07-09 21:39 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
SEGV backtrace (20.94 KB, text/plain)
2012-11-27 23:22 UTC, U. Artie Eoff
Details
SEGV backtrace #2 (20.15 KB, text/plain)
2013-04-25 15:20 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2012-11-27 23:22:06 UTC
Created attachment 70710 [details]
SEGV backtrace

Weston segfaults (see attached backtrace) when using the tablet-shell.so and resuming from a LOCKED state.  This may be related to bug 57634.

1. Load Weston with tablet-shell.so (see bug 57636)
2. Wait for tablet-shell to emit "switching to state LOCKED (from STARTING)"
3. Move mouse to trigger an unlock and notice the segfault.

----

cairo (master) 376d39121c0d4eba8f0a22be71f782ce18e50923
dri2proto (master) 4eeacce4c4a300b938b7e3fb78a8e443c491780b
drm (master) 171666e4b8127c17c68ea0d44cf4e81ec342f2d0
glproto (master) ec1eec4355ee4a6c5134f2178192f10b6d28a87a
kbproto (master) 391a1f6de6315fc0196d407d800597488315cccb
libX11 (master) d14b6a250f004fa405179db7020f6953001d17b9
libxkbcommon (master) f1598469434ef6128320d6b0810b8f82f6aca484
macros (master) 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
mesa (master) 13f9012ad3837c98a2c891244e64878fa61f9cd2
pixman (master) 44dd746bb68625b2f6be77c3f80292b45defe9d7
wayland (master) e8fbce73c7d2d546fcb90fe6115306f27c699fff
weston (master) b88b68fa42086304f615ee9f67e9c290d059868b
Comment 1 Kristian Høgsberg 2013-04-09 19:12:01 UTC
commit b67c91d46d52782f35049c6df9d1aae92885fb7c
Author: Tiago Vignatti <tiago.vignatti@intel.com>
Date:   Tue Apr 9 11:48:06 2013 -0300

    clients: tablet-shell: Wait for set_homescreen hits the server
    
    This relates to:
        https://bugs.freedesktop.org/show_bug.cgi?id=57634
        https://bugs.freedesktop.org/show_bug.cgi?id=57637
    
    Signed-off-by: Tiago Vignatti <tiago.vignatti@intel.com>
Comment 2 U. Artie Eoff 2013-04-25 15:18:01 UTC
This still segfaults for me... see new SEGV backtrace #2
Comment 3 U. Artie Eoff 2013-04-25 15:20:25 UTC
Created attachment 78478 [details]
SEGV backtrace #2
Comment 4 Rob Bradford 2013-07-09 11:13:51 UTC
I posted a patch to fix this and another bug it revealed to the list.
Comment 5 Kristian Høgsberg 2013-07-09 21:17:34 UTC
commit 6cf9b01e8803c1ae6e46b9a4d56c2962b4197a3f
Author: Rob Bradford <rob@linux.intel.com>
Date:   Tue Jul 9 12:12:49 2013 +0100

    tablet-shell: Fix copy and paste error in unlock handler
    
    The signal handler was using the wrong member to find the containing
    structure of the unlock listener.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=57637


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.