tablet-shell: Fix copy and paste error in unlock handler

The signal handler was using the wrong member to find the containing
structure of the unlock listener.

https://bugs.freedesktop.org/show_bug.cgi?id=57637